--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "leva": "^0.9.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.150.1"
+    "three": "^0.150.1",
+    "three-stdlib": "^2.21.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
